<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_detail">Details</string>
    <string name="pref_location_label">Location</string>
    <string name="pref_location_text" translatable="false">90604</string>
    <string name="pref_location_key" translatable="false">location</string>
    <!-- Key name for storing location status in SharedPreferences -->
    <string name="pref_location_status_key" translatable="false">loc-status</string>

    <string name="pref_units_key">units</string>
    <string name="pref_units_label">Units</string>
    <string name="view_map">View Map Location</string>
    <string name="action_share_title">Share</string>
    <string name="pref_units_label_metric">Metric</string>
    <string name="pref_units_label_imperial">Imperial</string>
    <string name="pref_units_metric" translatable="false">metric</string>
    <string name="pref_units_imperial" translatable="false">imperial</string>
    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>
    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>
    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>

    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
    <string name="format_wind_mph">
        Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
    </string>

        <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh">
        Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
    </string>

        <!-- Pressure format CHAR LIMIT=25] -->
        <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>
        <!-- Humidity format CHAR LIMIT=25]-->
        <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>

    <string name="sync_account_type">sunshine.com.example</string>
    <string name="content_authority">example.com.sunshine.app</string>

    <!-- Notification Format -->
    <string name="format_notification">Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g></string>

    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>
    <string name="pref_notify_label">Notifications</string>
    <string name="pref_notify_summary">Check box to turn notifications on</string>
    <string name="pref_notify_key" translatable = "false">notification</string>
    <string name="pref_category_notify">Notification Preferences</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>
    <string name="pref_category_notify_key" translatable = "false">categoryKeyNotify</string>
    <string name="pref_enable_notification_true">Enabled</string>
    <string name="pref_enable_notification_false">Not Enabled</string>

    <string name="empty_network_connection">The network is not available to fetch weather data</string>
    <string name="sharedPreferences_key">shared_key</string>

    <string name="empty_forecast_list">No Weather Information Available</string>
    <string name="empty_forecast_list_no_network">No weather information available. The network is not available to fetch weather data.</string>
    <string name="empty_forecast_list_server_down">No weather information available. The server is not returning data.</string>
    <string name="empty_forecast_list_server_error">No weather information available. The server is not returning valid data. Please check for an updated version of Sunshine.</string>
    <string name="empty_forecast_list_invalid_location">No weather information available. The location in settings is not recognized by the weather server.</string>

    <string name="pref_location_error_description">Invalid Location (<xliff:g id="location_setting">%1$s</xliff:g>)"</string>
    <string name="pref_location_unknown_description">Validating Location... (<xliff:g id="location_setting">%1$s</xliff:g>)"</string>



</resources>